Update latest changes

--- a/aisa.html
+++ b/aisa.html
@@ -83,11 +83,16 @@
                             <div class="navbar-nav mr-auto py-0">
                                 <a href="index.html" class="nav-item nav-link">Home</a>
                                 <a href="index.html#about" class="nav-item nav-link">About</a>
-                                <a href="index.html#products" class="nav-item nav-link">Products</a>
+                                <div class="nav-item dropdown">
+                                    <a href="index.html#products" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Products</a>
+                                    <div class="dropdown-menu m-0">
+                                        <a href="aisa.html" class="dropdown-item active">AISA</a>
+                                        <a href="floodsense.html" class="dropdown-item">FloodSense</a>
+                                    </div>
+                                </div>
                                 <a href="index.html#services" class="nav-item nav-link">Services</a>
                                 <a href="index.html#leadership" class="nav-item nav-link">Leadership</a>
                                 <a href="index.html#contact" class="nav-item nav-link">Contact</a>
-                                <a href="aisa.html" class="nav-item nav-link active" style="color: #1e3a8a; font-weight: 700;">AISA</a>
                             </div>
                             <a href="https://ai-serviceagent.com" target="_blank" class="btn btn-primary rounded-0 py-4 px-md-5 d-none d-lg-block">Go to AISA<i class="fa fa-arrow-right ms-3"></i></a>
                         </div>
