--- a/floodsense.html
+++ b/floodsense.html
@@ -3,10 +3,10 @@
 
 <head>
     <meta charset="utf-8">
-    <title>FloodSense - Amaran Awal Banjir Pintar | Nasa Def</title>
+    <title>FloodSense - Smart Flood Early Warning System | Nasa Def</title>
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
-    <meta content="" name="keywords">
-    <meta content="" name="description">
+    <meta content="FloodSense, Smart Flood Warning, Early Flood Detection, IoT Flood Monitoring, Flood Alert System, Nasa Def" name="keywords">
+    <meta content="FloodSense - Smart flood early warning system by Nasa Def Sdn Bhd for community protection and disaster management" name="description">
 
     <!-- Favicon -->
     <link href="img/favicon.ico" rel="icon">
@@ -61,14 +61,18 @@
                             <div class="navbar-nav mr-auto py-0">
                                 <a href="index.html" class="nav-item nav-link">Home</a>
                                 <a href="index.html#about" class="nav-item nav-link">About</a>
-                                <a href="index.html#products" class="nav-item nav-link">Products</a>
+                                <div class="nav-item dropdown">
+                                    <a href="index.html#products" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Products</a>
+                                    <div class="dropdown-menu m-0">
+                                        <a href="aisa.html" class="dropdown-item">AISA</a>
+                                        <a href="floodsense.html" class="dropdown-item active">FloodSense</a>
+                                    </div>
+                                </div>
                                 <a href="index.html#services" class="nav-item nav-link">Services</a>
                                 <a href="index.html#leadership" class="nav-item nav-link">Leadership</a>
                                 <a href="index.html#contact" class="nav-item nav-link">Contact</a>
-                                <a href="aisa.html" class="nav-item nav-link">AISA</a>
-                                <a href="floodsense.html" class="nav-item nav-link active" style="color: #1e3a8a; font-weight: 700;">FloodSense</a>
                             </div>
-                            <a href="#contact" class="btn btn-primary rounded-0 py-4 px-md-5 d-none d-lg-block">Hubungi Kami<i class="fa fa-arrow-right ms-3"></i></a>
+                            <a href="#contact" class="btn btn-primary rounded-0 py-4 px-md-5 d-none d-lg-block">Contact Us<i class="fa fa-arrow-right ms-3"></i></a>
                         </div>
                     </nav>
                 </div>
@@ -79,11 +83,11 @@
         <div class="container-fluid page-header mb-5 p-0" style="background-image: url(img/carousel-1.jpg);">
             <div class="container-fluid page-header-inner py-5">
                 <div class="container text-center pb-5">
-                    <h1 class="display-3 text-white mb-3 animated slideInDown">FloodSense - Amaran Awal Banjir Pintar</h1>
+                    <h1 class="display-3 text-white mb-3 animated slideInDown">FloodSense - Smart Flood Early Warning System</h1>
                     <nav aria-label="breadcrumb">
                         <ol class="breadcrumb justify-content-center text-uppercase">
                             <li class="breadcrumb-item"><a href="index.html">Home</a></li>
-                            <li class="breadcrumb-item"><a href="#">Produk</a></li>
+                            <li class="breadcrumb-item"><a href="#">Products</a></li>
                             <li class="breadcrumb-item text-white active" aria-current="page">FloodSense</li>
                         </ol>
                     </nav>
@@ -96,33 +100,33 @@
             <div class="container">
                 <div class="text-center wow fadeInUp" data-wow-delay="0.1s">
                     <h6 class="section-title text-center text-primary text-uppercase">FloodSense</h6>
-                    <h1 class="mb-5">Amaran Awal Banjir <span class="text-primary text-uppercase">Pintar</span></h1>
+                    <h1 class="mb-5">Smart Flood <span class="text-primary text-uppercase">Early Warning</span></h1>
                 </div>
                 <div class="row g-5 align-items-center">
                     <div class="col-lg-6 wow fadeIn" data-wow-delay="0.1s">
                         <div class="about-img position-relative overflow-hidden p-5 pe-0">
-                            <img class="img-fluid w-100" src="img/about-1.jpg">
+                            <img class="img-fluid w-100" src="img/about-4.jpg">
                         </div>
                     </div>
                     <div class="col-lg-6 wow fadeIn" data-wow-delay="0.5s">
-                        <h1 class="mb-4">FloodSense melindungi komuniti anda daripada ancaman banjir</h1>
-                        <p class="mb-4">FloodSense ialah solusi pintar amaran banjir yang direka untuk melindungi komuniti, ladang, dan kawasan berisiko tinggi. Dengan sistem ini, sebarang kenaikan paras air dapat dikesan lebih awal dan amaran segera disalurkan kepada penduduk serta pihak berkaitan.</p>
-                        <p class="mb-4">Dengan FloodSense, setiap detik berharga dapat digunakan untuk menyelamatkan nyawa, harta benda, dan hasil tanaman. Ia memberi ketenangan fikiran kepada komuniti setempat, membolehkan tindakan pantas diambil sebelum keadaan menjadi kritikal.</p>
+                        <h1 class="mb-4">FloodSense protects your community from flood threats</h1>
+                        <p class="mb-4">FloodSense is a smart flood warning solution designed to protect communities, farms, and high-risk areas. With this system, any rise in water levels can be detected early and immediate warnings are sent to residents and relevant parties.</p>
+                        <p class="mb-4">With FloodSense, every precious second can be used to save lives, property, and crops. It provides peace of mind to local communities, enabling quick action to be taken before situations become critical.</p>
                         <div class="row gy-2 gx-4 mb-4">
                             <div class="col-sm-6">
-                                <p class="mb-0"><i class="fa fa-check text-primary me-2"></i>Amaran awal banjir terus ke telefon</p>
+                                <p class="mb-0"><i class="fa fa-check text-primary me-2"></i>Early flood warnings directly to phones</p>
                             </div>
                             <div class="col-sm-6">
-                                <p class="mb-0"><i class="fa fa-check text-primary me-2"></i>Pemasangan sesuai di kampung & ladang</p>
+                                <p class="mb-0"><i class="fa fa-check text-primary me-2"></i>Suitable installation in villages & farms</p>
                             </div>
                             <div class="col-sm-6">
-                                <p class="mb-0"><i class="fa fa-check text-primary me-2"></i>Membantu kerajaan membuat keputusan cepat</p>
+                                <p class="mb-0"><i class="fa fa-check text-primary me-2"></i>Helps government make quick decisions</p>
                             </div>
                             <div class="col-sm-6">
-                                <p class="mb-0"><i class="fa fa-check text-primary me-2"></i>Lindungi nyawa & kurangkan kerugian</p>
+                                <p class="mb-0"><i class="fa fa-check text-primary me-2"></i>Protect lives & reduce losses</p>
                             </div>
                         </div>
-                        <a class="btn btn-primary py-3 px-5 mt-2" href="#features">Ketahui Teknologi</a>
+                        <a class="btn btn-primary py-3 px-5 mt-2" href="#features">Learn About Technology</a>
                     </div>
                 </div>
             </div>
@@ -132,8 +136,8 @@
         <div class="container-xxl py-5" id="features">
             <div class="container">
                 <div class="text-center wow fadeInUp" data-wow-delay="0.1s">
-                    <h6 class="section-title text-center text-primary text-uppercase">Teknologi</h6>
-                    <h1 class="mb-5">Ciri-ciri <span class="text-primary text-uppercase">FloodSense</span></h1>
+                    <h6 class="section-title text-center text-primary text-uppercase">Technology</h6>
+                    <h1 class="mb-5">Features of <span class="text-primary text-uppercase">FloodSense</span></h1>
                 </div>
                 <div class="row g-4">
                     <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.1s">
@@ -143,8 +147,8 @@
                                     <i class="fa fa-camera fa-2x text-primary"></i>
                                 </div>
                             </div>
-                            <h5 class="mb-3">CCTV Berkuasa Solar</h5>
-                            <p class="text-body mb-0">Kamera pengawasan 24/7 berkuasa solar dengan teknologi AI-ready untuk pemantauan banjir masa nyata.</p>
+                            <h5 class="mb-3">Solar-Powered CCTV</h5>
+                            <p class="text-body mb-0">24/7 surveillance camera powered by solar with AI-ready technology for real-time flood monitoring.</p>
                         </div>
                     </div>
                     <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.3s">
@@ -154,8 +158,8 @@
                                     <i class="fa fa-tint fa-2x text-primary"></i>
                                 </div>
                             </div>
-                            <h5 class="mb-3">Sensor Paras Air NB-IoT</h5>
-                            <p class="text-body mb-0">Sensor paras air dengan 4-meter range detection dan komunikasi NB-IoT untuk monitoring berterusan.</p>
+                            <h5 class="mb-3">NB-IoT Water Level Sensor</h5>
+                            <p class="text-body mb-0">Water level sensor with 4-meter range detection and NB-IoT communication for continuous monitoring.</p>
                         </div>
                     </div>
                     <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.5s">
@@ -166,7 +170,7 @@
                                 </div>
                             </div>
                             <h5 class="mb-3">Real-time Alerts</h5>
-                            <p class="text-body mb-0">Sistem amaran segera melalui SMS, panggilan telefon, dan aplikasi mobile kepada komuniti dan pihak berkuasa.</p>
+                            <p class="text-body mb-0">Immediate alert system through SMS, phone calls, and mobile applications to communities and authorities.</p>
                         </div>
                     </div>
                     <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.7s">
@@ -177,7 +181,7 @@
                                 </div>
                             </div>
                             <h5 class="mb-3">AI-Powered Analytics</h5>
-                            <p class="text-body mb-0">Analisis predictive AI untuk ramalan banjir berdasarkan data cuaca dan aras air sejarah.</p>
+                            <p class="text-body mb-0">Predictive AI analytics for flood forecasting based on weather data and historical water levels.</p>
                         </div>
                     </div>
                     <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.9s">
@@ -188,7 +192,7 @@
                                 </div>
                             </div>
                             <h5 class="mb-3">Government-Grade Infrastructure</h5>
-                            <p class="text-body mb-0">Infrastruktur gred kerajaan untuk pengurusan bencana dengan 24/7 remote monitoring.</p>
+                            <p class="text-body mb-0">Government-grade infrastructure for disaster management with 24/7 remote monitoring.</p>
                         </div>
                     </div>
                     <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="1.1s">
@@ -199,7 +203,7 @@
                                 </div>
                             </div>
                             <h5 class="mb-3">Mobile Accessibility</h5>
-                            <p class="text-body mb-0">Akses mudah melalui aplikasi mobile untuk pengurusan dan pemantauan daripada mana-mana lokasi.</p>
+                            <p class="text-body mb-0">Easy access through mobile applications for management and monitoring from any location.</p>
                         </div>
                     </div>
                 </div>
@@ -207,23 +211,23 @@
         </div>
         <!-- FloodSense Features End -->
         <!-- Call to Action Start -->
-        <div class="container-xxl py-5" style="background: linear-gradient(rgba(15, 23, 43, .7), rgba(15, 23, 43, .7)), url(img/bg-hero.jpg) center center; background-size: cover;">
+        <div class="container-xxl py-5" style="background: linear-gradient(rgba(15, 23, 43, .7), rgba(15, 23, 43, .7)), url(img/bg-hero.jpg) center center; background-size: cover; position: relative; z-index: 10;">
             <div class="container">
                 <div class="text-center wow fadeInUp" data-wow-delay="0.1s">
                     <h6 class="section-title text-center text-white text-uppercase">FloodSense</h6>
-                    <h1 class="text-white mb-4">Teknologi yang menjaga anda daripada ancaman banjir</h1>
-                    <p class="text-white mb-4">Hubungi kami hari ini untuk pemasangan FloodSense di kawasan anda dan lindungi komuniti anda daripada ancaman banjir.</p>
+                    <h1 class="text-white mb-4">Technology that protects you from flood threats</h1>
+                    <p class="text-white mb-4">Contact us today for FloodSense installation in your area and protect your community from flood threats.</p>
                     <div class="row justify-content-center">
                         <div class="col-lg-8">
                             <div class="row g-3">
                                 <div class="col-md-6">
                                     <a class="btn btn-light btn-lg w-100 py-3" href="#contact">
-                                        <i class="fa fa-phone me-2"></i>Hubungi Kami
+                                        <i class="fa fa-phone me-2"></i>Contact Us
                                     </a>
                                 </div>
                                 <div class="col-md-6">
                                     <a class="btn btn-primary btn-lg w-100 py-3" href="mailto:info@nasadef.com.my">
-                                        <i class="fa fa-envelope me-2"></i>Email Kami
+                                        <i class="fa fa-envelope me-2"></i>Email Us
                                     </a>
                                 </div>
                             </div>
