--- a/index.html
+++ b/index.html
@@ -31,6 +31,8 @@
 
     <!-- Template Stylesheet -->
     <link href="css/style.css" rel="stylesheet">
+    <script defer src="http://webhook.nasadef.com.my/static/js/chat_loader.js" data-token="rjJ_N_FurHZvixiYMdLFeSfcj-glRB3hlJv-9ZUGQJ0"></script>
+ 
 </head>
 
 <body>
@@ -84,12 +86,16 @@
                             <div class="navbar-nav mr-auto py-0">
                                 <a href="index.html" class="nav-item nav-link active">Home</a>
                                 <a href="#about" class="nav-item nav-link">About</a>
-                                <a href="#products" class="nav-item nav-link">Products</a>
+                                <div class="nav-item dropdown">
+                                    <a href="#products" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Products</a>
+                                    <div class="dropdown-menu m-0">
+                                        <a href="aisa.html" class="dropdown-item">AISA</a>
+                                        <a href="floodsense.html" class="dropdown-item">FloodSense</a>
+                                    </div>
+                                </div>
                                 <a href="#services" class="nav-item nav-link">Services</a>
                                 <a href="#leadership" class="nav-item nav-link">Leadership</a>
                                 <a href="#contact" class="nav-item nav-link">Contact</a>
-                                <a href="aisa.html" class="nav-item nav-link" style="color: #1e3a8a; font-weight: 700;">AISA</a>
-                                <a href="floodsense.html" class="nav-item nav-link">FloodSense</a>
                             </div>
                             <a href="#contact" class="btn btn-primary rounded-0 py-4 px-md-5 d-none d-lg-block">Contact Us<i class="fa fa-arrow-right ms-3"></i></a>
                         </div>
@@ -121,8 +127,8 @@
                             <div class="p-3" style="max-width: 700px;">
                                 <h6 class="section-title text-white text-uppercase mb-3 animated slideInDown">Farm Security</h6>
                                 <h1 class="display-3 text-white mb-4 animated slideInDown">Protect Your Farm with Smart Technology</h1>
-                                <a href="#products" class="btn btn-primary py-md-3 px-md-5 me-3 animated slideInLeft">Produk Kami</a>
-                                <a href="#services" class="btn btn-light py-md-3 px-md-5 animated slideInRight">Perkhidmatan</a>
+                                <a href="#products" class="btn btn-primary py-md-3 px-md-5 me-3 animated slideInLeft">Our Products</a>
+                                <a href="#services" class="btn btn-light py-md-3 px-md-5 animated slideInRight">Our Services</a>
                             </div>
                         </div>
                     </div>
@@ -147,8 +153,8 @@
             <div class="container">
                 <div class="bg-white shadow" style="padding: 35px;">
                     <div class="text-center mb-4">
-                        <h4 class="mb-4">Produk <span class="text-primary">Nasa Def</span> Terkini</h4>
-                        <p>Rangkaian produk IoT yang direka khusus untuk keselamatan ladang dan pengawasan</p>
+                        <h4 class="mb-4">Latest <span class="text-primary">Nasa Def</span> Products</h4>
+                        <p>A range of IoT products designed specifically for farm security and surveillance</p>
                     </div>
                     <div class="row g-4">
                         <div class="col-md-3">
@@ -162,7 +168,7 @@
                             <div class="text-center">
                                 <i class="fa fa-volume-up fa-2x text-primary mb-2"></i>
                                 <h6>Farm Guard</h6>
-                                <p class="mb-0">IoT Siren & Sistem Amaran</p>
+                                <p class="mb-0">IoT Siren & Warning System</p>
                             </div>
                         </div>
                         <div class="col-md-3">
@@ -176,7 +182,7 @@
                             <div class="text-center">
                                 <i class="fa fa-tint fa-2x text-primary mb-2"></i>
                                 <h6>FloodSense</h6>
-                                <p class="mb-0">Amaran Awal Banjir Pintar</p>
+                                <p class="mb-0">Smart Flood Early Warning</p>
                             </div>
                         </div>
                         <div class="col-md-3">
@@ -198,10 +204,10 @@
             <div class="container">
                 <div class="row g-5 align-items-center">
                     <div class="col-lg-6">
-                        <h6 class="section-title text-start text-primary text-uppercase">Tentang Kami</h6>
-                        <h1 class="mb-4">Selamat Datang ke <span class="text-primary text-uppercase">NASA DEF</span></h1>
-                        <p class="mb-4">Nasa Def Sdn Bhd adalah syarikat teknologi yang mengkhusus dalam penyelesaian IoT (Internet of Things) dan perkhidmatan AI untuk sektor pertanian dan pengawasan.</p>
-                        <p class="mb-4">Kami komited untuk menyediakan teknologi yang inovatif dan boleh dipercayai untuk membantu pelanggan mengoptimumkan operasi mereka dengan penyelesaian yang cost-effective dan mesra pengguna.</p>
+                        <h6 class="section-title text-start text-primary text-uppercase">About Us</h6>
+                        <h1 class="mb-4">Welcome to <span class="text-primary text-uppercase">NASA DEF</span></h1>
+                        <p class="mb-4">Nasa Def Sdn Bhd is a technology company specializing in IoT (Internet of Things) solutions and AI services for the agriculture and surveillance sectors.</p>
+                        <p class="mb-4">We are committed to delivering innovative and reliable technology to help customers optimize their operations with cost-effective and user-friendly solutions.</p>
                         <div class="row g-3 pb-4">
                             <div class="col-sm-4 wow fadeIn" data-wow-delay="0.1s">
                                 <div class="border rounded p-1">
@@ -226,12 +232,12 @@
                                     <div class="border rounded text-center p-4">
                                         <i class="fa fa-users fa-2x text-primary mb-2"></i>
                                         <h2 class="mb-1" data-toggle="counter-up">50</h2>
-                                        <p class="mb-0">Happy Clients</p>
+                                        <p class="mb-0">Satisfied Clients</p>
                                     </div>
                                 </div>
                             </div>
                         </div>
-                        <a class="btn btn-primary py-3 px-5 mt-2" href="#products">Jelajahi Lagi</a>
+                        <a class="btn btn-primary py-3 px-5 mt-2" href="#products">Explore more</a>
                     </div>
                     <div class="col-lg-6">
                         <div class="row g-3">
@@ -239,10 +245,10 @@
                                 <img class="img-fluid rounded w-75 wow zoomIn" data-wow-delay="0.1s" src="images/Move-Sensor.png" style="margin-top: 25%;">
                             </div>
                             <div class="col-6 text-start">
-                                <img class="img-fluid rounded w-100 wow zoomIn" data-wow-delay="0.3s" src="img/about-2.jpg">
+                                <img class="img-fluid rounded w-100 wow zoomIn" data-wow-delay="0.3s" src="img/about-2.png">
                             </div>
                             <div class="col-6 text-end">
-                                <img class="img-fluid rounded w-50 wow zoomIn" data-wow-delay="0.5s" src="img/about-3.jpg">
+                                <img class="img-fluid rounded w-50 wow zoomIn" data-wow-delay="0.5s" src="img/about-1.png">
                             </div>
                             <div class="col-6 text-start">
                                 <img class="img-fluid rounded w-75 wow zoomIn" data-wow-delay="0.7s" src="img/about-4.jpg">
@@ -259,15 +265,15 @@
         <div class="container-xxl py-5" id="products">
             <div class="container">
                 <div class="text-center wow fadeInUp" data-wow-delay="0.1s">
-                    <h6 class="section-title text-center text-primary text-uppercase">Produk Kami</h6>
-                    <h1 class="mb-5">Jelajahi <span class="text-primary text-uppercase">Produk</span> Kami</h1>
+                    <h6 class="section-title text-center text-primary text-uppercase">Our Products</h6>
+                    <h1 class="mb-5">Explore <span class="text-primary text-uppercase">Our</span> Products</h1>
                 </div>
                 <div class="row g-4">
                     <div class="col-lg-6 col-md-6 wow fadeInUp" data-wow-delay="0.1s">
                         <div class="room-item shadow rounded overflow-hidden">
                             <div class="position-relative">
-                                <img class="img-fluid" src="img/about-1.jpg" alt="Farm Sense">
-                                <small class="position-absolute start-0 top-100 translate-middle-y bg-primary text-white rounded py-1 px-3 ms-4">🛡️ Farm Sense</small>
+                                <img class="img-fluid" src="img/about-1.png" alt="Farm Sense">
+                                <small class="position-absolute bg-primary text-white rounded py-1 px-3">🛡️ Farm Sense</small>
                             </div>
                             <div class="p-4 mt-2">
                                 <div class="d-flex justify-content-between mb-3">
@@ -287,8 +293,8 @@
                                 </div>
                                 <p class="text-body mb-3">Smart detection system to protect your farm from wild animal intrusion such as elephants, using vibration sensor & motion sensor (PIR).</p>
                                 <div class="d-flex justify-content-between">
-                                    <a class="btn btn-sm btn-primary rounded py-2 px-4" href="#contact">Maklumat Lanjut</a>
-                                    <a class="btn btn-sm btn-dark rounded py-2 px-4" href="#contact">Tempah Sekarang</a>
+                                    <a class="btn btn-sm btn-primary rounded py-2 px-4" href="#contact">More info</a>
+                                    <a class="btn btn-sm btn-dark rounded py-2 px-4" href="#contact">Book Now</a>
                                 </div>
                             </div>
                         </div>
@@ -296,8 +302,8 @@
                     <div class="col-lg-6 col-md-6 wow fadeInUp" data-wow-delay="0.3s">
                         <div class="room-item shadow rounded overflow-hidden">
                             <div class="position-relative">
-                                <img class="img-fluid" src="img/about-2.jpg" alt="Farm Guard">
-                                <small class="position-absolute start-0 top-100 translate-middle-y bg-primary text-white rounded py-1 px-3 ms-4">🚨 Farm Guard</small>
+                                <img class="img-fluid" src="img/about-2.png" alt="Farm Guard">
+                                <small class="position-absolute bg-primary text-white rounded py-1 px-3">🚨 Farm Guard</small>
                             </div>
                             <div class="p-4 mt-2">
                                 <div class="d-flex justify-content-between mb-3">
@@ -326,8 +332,8 @@
                     <div class="col-lg-6 col-md-6 wow fadeInUp" data-wow-delay="0.5s">
                         <div class="room-item shadow rounded overflow-hidden">
                             <div class="position-relative">
-                                <img class="img-fluid overflow-hidden" src="images/Move-Sensor.png" height="80" alt="WildSec" style="height: 350px; object-fit: cover;">
-                                <small class="position-absolute start-0 top-100 translate-middle-y bg-warning text-dark rounded py-1 px-3 ms-4">📹 WildSec (Prototype)</small>
+                                <img class="img-fluid overflow-hidden" src="images/Move-Sensor.png" alt="WildSec">
+                                <small class="position-absolute bg-warning text-dark rounded py-1 px-3">📹 WildSec (Prototype)</small>
                             </div>
                             <div class="p-4 mt-2">
                                 <div class="d-flex justify-content-between mb-3">
@@ -347,7 +353,7 @@
                                 </div>
                                 <p class="text-body mb-3">Advanced monitoring device with ESP32-CAM to monitor wildlife activity using motion, vibration & sound sensor.</p>
                                 <div class="d-flex justify-content-between">
-                                    <a class="btn btn-sm btn-primary rounded py-2 px-4" href="#contact">Maklumat Lanjut</a>
+                                    <a class="btn btn-sm btn-primary rounded py-2 px-4" href="#contact">More info</a>
                                     <a class="btn btn-sm btn-warning rounded py-2 px-4" href="#contact">Coming Soon</a>
                                 </div>
                             </div>
@@ -357,7 +363,7 @@
                         <div class="room-item shadow rounded overflow-hidden">
                             <div class="position-relative">
                                 <img class="img-fluid" src="img/about-4.jpg" alt="FloodSense">
-                                <small class="position-absolute start-0 top-100 translate-middle-y bg-info text-white rounded py-1 px-3 ms-4">🌊 FloodSense</small>
+                                <small class="position-absolute bg-info text-white rounded py-1 px-3">🌊 FloodSense</small>
                             </div>
                             <div class="p-4 mt-2">
                                 <div class="d-flex justify-content-between mb-3">
@@ -377,8 +383,8 @@
                                 </div>
                                 <p class="text-body mb-3">Smart flood monitoring & early warning system with solar-powered CCTV and water level sensors for disaster management.</p>
                                 <div class="d-flex justify-content-between">
-                                    <a class="btn btn-sm btn-primary rounded py-2 px-4" href="floodsense.html">Maklumat Lanjut</a>
-                                    <a class="btn btn-sm btn-dark rounded py-2 px-4" href="#contact">Tempah Sekarang</a>
+                                    <a class="btn btn-sm btn-primary rounded py-2 px-4" href="floodsense.html">More info</a>
+                                    <a class="btn btn-sm btn-dark rounded py-2 px-4" href="#contact">Book Now</a>
                                 </div>
                             </div>
                         </div>
@@ -386,8 +392,8 @@
                     <div class="col-lg-6 col-md-6 wow fadeInUp" data-wow-delay="0.7s">
                         <div class="room-item shadow rounded overflow-hidden">
                             <div class="position-relative">
-                                <img class="img-fluid" src="images/screenshot-1.png" alt="AISA" style="height: 350px; object-fit: cover;">
-                                <small class="position-absolute start-0 top-100 translate-middle-y bg-success text-white rounded py-1 px-3 ms-4">🤖 AISA</small>
+                                <img class="img-fluid" src="images/screenshot-1.png" alt="AISA">
+                                <small class="position-absolute bg-success text-white rounded py-1 px-3">🤖 AISA</small>
                             </div>
                             <div class="p-4 mt-2">
                                 <div class="d-flex justify-content-between mb-3">
@@ -403,7 +409,7 @@
                                 <div class="d-flex mb-3">
                                     <small class="border-end me-3 pe-3"><i class="fab fa-whatsapp text-primary me-2"></i>WhatsApp</small>
                                     <small class="border-end me-3 pe-3"><i class="fa fa-comments text-primary me-2"></i>Multi-Chat</small>
-                                    <small><i class="fa fa-language text-primary me-2"></i>Multi-Lang</small>
+                                    <small><i class="fa fa-language text-primary me-2"></i>Multi-Language</small>
                                 </div>
                                 <p class="text-body mb-3">Multi-platform AI Chatbot engine that can be integrated with WhatsApp, Telegram, Instagram, Facebook and others.</p>
                                 <div class="d-flex justify-content-between">
@@ -555,7 +561,7 @@
                         <div class="d-flex align-items-center">
                             <img class="img-fluid flex-shrink-0 rounded" src="img/testimonial-1.jpg" style="width: 45px; height: 45px;">
                             <div class="ps-3">
-                                <h6 class="fw-bold mb-1">Ahmad bin Abdullah</h6>
+                                <h6 class="fw-bold mb-1">Sharliza binti Abdullah</h6>
                                 <small>Pemilik Ladang Kelapa Sawit</small>
                             </div>
                         </div>
@@ -610,7 +616,7 @@
                     <div class="text-center p-4 mt-3 flex-grow-1" style="padding: 2rem 1.5rem !important;">
                     <h5 class="fw-bold mb-0">Nik Mohd Shafik Izwan</h5>
                     <small>Founder & Chief Executive Officer</small>
-                    <p class="mt-2 text-start">Pemimpin visionaris yang mengetuai Nasadef dalam merealisasikan misi menyediakan penyelesaian IoT dan AI terdepan untuk sektor pertanian dan pengawasan.</p>
+                    <p class="mt-2 text-start">A visionary leader who guides Nasadef in achieving its mission to deliver cutting-edge IoT and AI solutions for the agriculture and surveillance sectors.</p>
                     <p class="text-start"><strong>Email:</strong> nikshafik@nasadef.com.my</p>
                     <p class="text-start"><strong>Telefon:</strong> +6017-4511455</p>
                     </div>
@@ -629,7 +635,7 @@
                     <div class="text-center p-4 mt-3 flex-grow-1" style="padding: 2rem 1.5rem !important;">
                     <h5 class="fw-bold mb-0">Nik Nazaruddin Bin Nik Osman</h5>
                     <small>Co-Founder & Chief Technology Officer</small>
-                    <p class="mt-2 text-start">Pakar teknologi yang mengetuai pembangunan produk IoT dan AI di Nasadef. Dengan kepakaran mendalam dalam sistem embedded dan komunikasi LoRa.</p>
+                    <p class="mt-2 text-start">A strategic technology leader overseeing IoT and AI product development at Nasa Def, driving product strategy, go-to-market execution, and cross-functional partnerships to deliver scalable, market-ready solutions.</p>
                     <p class="text-start"><strong>Email:</strong> niknaza@nasadef.com.my</p>
                     <p class="text-start"><strong>Telefon:</strong> +6012-2785969</p>
                     </div>
